# Archaeohack-3A1W

./: README.md  decodeb64.py  gui.py  handwriting_output.txt  model_unquant.onnx  modelcheck.py  predictor.py  pyproject.toml  quant.onnx  updated_hieroglyphs_copy.json
GUI/: gui.py
archaeohack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
